terraform/waf.tf
resource "aws_wafv2_web_acl" "pharma" {

  name = "pharma-waf"

  scope = "REGIONAL"

  default_action {

    allow {}

  }

  visibility_config {

    cloudwatch_metrics_enabled = true

    metric_name = "pharmaWAF"

    sampled_requests_enabled = true

  }

  rule {

    name = "AWSManagedRulesCommonRuleSet"

    priority = 1

    override_action {

      none {}

    }

    statement {

      managed_rule_group_statement {

        name = "AWSManagedRulesCommonRuleSet"

        vendor_name = "AWS"

      }

    }

    visibility_config {

      cloudwatch_metrics_enabled = true

      metric_name = "CommonRuleSet"

      sampled_requests_enabled = true

    }

  }

}

resource "aws_wafv2_web_acl_association" "pharma" {

  resource_arn = aws_lb.main.arn

  web_acl_arn = aws_wafv2_web_acl.pharma.arn

}
